--- a/strokepiechart/src/main/res/values/attr.xml
+++ b/strokepiechart/src/main/res/values/attr.xml
@@ -20,6 +20,7 @@
         <attr name="defaultColor" format="color" />
         <attr name="strokeWidth" format="dimension" />
         <attr name="roundedEdges" format="boolean" />
+        <attr name="distance" format="float" />
         <attr name="text" format="string" />
         <attr name="fontResId" format="integer" />
         <attr name="bold" format="boolean" />
