--- a/sample/src/main/res/layout/fragment_sample_strokepiechart.xml
+++ b/sample/src/main/res/layout/fragment_sample_strokepiechart.xml
@@ -16,6 +16,7 @@
 
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -27,7 +28,28 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.32999998"
         app:text="@string/StrokePieChart"
         app:textColor="@android:color/black"
         app:textSize="24sp" />
+
+    <Button
+        android:id="@+id/btnStrokePieChartAddEntry"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="164dp"
+        android:text="@string/AddEntry"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mStrokePieChart" />
+
+    <Button
+        android:id="@+id/btnStrokePieChartClear"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="@string/Clear"
+        app:layout_constraintEnd_toEndOf="@+id/btnStrokePieChartAddEntry"
+        app:layout_constraintStart_toStartOf="@+id/btnStrokePieChartAddEntry"
+        app:layout_constraintTop_toBottomOf="@+id/btnStrokePieChartAddEntry" />
 </androidx.constraintlayout.widget.ConstraintLayout>
